--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -12,18 +12,30 @@
   </thead>
 
   <tbody>
-    <% @projects.each do |project| %>
-      <tr>
+    <% if user_signed_in? %>
+      <% @projects.each do |project| %>
+        <tr>
+         <td><%= project.title %></td>
+         <td><%= project.description %></td>
+         <td><%= link_to 'Show', project %></td>
+         <td><%= link_to 'Edit', edit_project_path(project) %></td>
+         <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+       </tr>
+     <% end %>
+     <% else %>
+       <% @projects.each do |project| %>
+       <tr>
         <td><%= project.title %></td>
         <td><%= project.description %></td>
         <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
+       </tr>
+      <% end %>
+      <% end %>
   </tbody>
 </table>
 
 <br>
 
 <%= link_to 'New Project', new_project_path %>
+
+
