--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -10,5 +10,7 @@
   <%= @project.description %>
 </p>
 
-<%= link_to 'Edit', edit_project_path(@project) %> |
+<% if user_signed_in? %>
+  <%= link_to 'Edit', edit_project_path(@project) %> |
+<% end %>
 <%= link_to 'Back', projects_path %>
