Added more tests to rspec to test sign up and log in

--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -28,6 +28,9 @@
 
 <br>
 
-<%= link_to 'New Project', new_project_path %>
+<% if user_signed_in? %>
+  <%= link_to 'New Project', new_project_path %>
+<% end %>
+
 
 
