--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,8 @@
+<div class="container">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <span class="text-danger"><%= render "devise/shared/error_messages", resource: resource%></span>
 
   <div class="field">
     <%= f.label :email %><br />
@@ -31,13 +32,17 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
+  <p></p>
   <div class="actions">
-    <%= f.submit "Update" %>
+    <%= f.submit "Update", :class => "rounded bg-success text-white"%>
   </div>
 <% end %>
 
+<p></p>
+
 <h3>Cancel my account</h3>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
+<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, :class => "rounded bg-danger text-white" %></p>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back, :class => "rounded bg-info text-white" %>
+</div>
