--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,42 @@
 <!DOCTYPE html>
 
+<div class="container">
+  <header>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <div class="container-fluid">
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-mdb-toggle="collapse"
+        data-mdb-target="#navbarExample01"
+        aria-controls="navbarExample01"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <i class="fas fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarExample01">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item active">
+            <span style="margin-left:2.5em"><%= link_to 'Home', root_path, :class => "text-white" %></span>
+          </li>
+          <li class="nav-item">
+            <% if user_signed_in? %>
+                <span style="margin-left:2.5em"><%= link_to 'Profile', edit_user_registration_path, :class => "text-white" %></span>
+                <span style="margin-left:2.5em"><%= link_to 'Log out', destroy_user_session_path, method: :delete, :class => "text-white" %></span>
+                <span class="text-white" style="margin-left:35em"><%= current_user.email %></span>
+            <% else %>
+              <span style="margin-left:2.5em"><%= link_to 'Log In', new_user_session_path, :class => "text-white" %></span>
+              <span style="margin-left:2.5em"><%= link_to 'Sign Up', new_user_registration_path, :class => "text-white" %></span>
+            <% end %>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <!-- Navbar -->
+</div>
 
 <html>
   <head>
@@ -11,19 +48,6 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   
-    <% if user_signed_in? %>
-      <%= current_user.email %>
-      <ul class="dropdown-menu" role="menu">
-              <li><%= link_to 'Profile', edit_user_registration_path %></li>
-              <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
-    <% else %>
-      <li><%= link_to 'Log In', new_user_session_path %></li>
-      <li><%= link_to 'Sign Up', new_user_registration_path %></li>
-
-    <% end %>
-
-
-
   </head>
 
   <body>
