--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,13 @@
-<h1>New Project</h1>
 
+<div class="container">
+  <div class="page-header">
+    <h1>New Project</h1>
+    <h5><span class="label label-danger">Complete all fields to create this project </span></h5>
+  </div>
+</div>
+
+<div class="container">
 <%= render 'form', project: @project %>
 
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Back', projects_path, :class => "rounded bg-info text-white"  %>
+</div>
