--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,16 +1,27 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @project.title %>
-</p>
 
-<p>
-  <strong>Description:</strong>
-  <%= @project.description %>
-</p>
+<div class="container">
+  <div class="jumbotron">
+    <h1><%= @project.title %></h1>
+    <p>
+    </p>
+    <span class="text-white bg-info" > Last update <%= @project.updated_at.strftime("%b %d, %Y") %></span>
+  </div>
+</div>
+<div class="container">
+  <div class="panel panel-default">
+    <div class="panel-body">
+      <p>
+        <%= @project.description %>
+      </p>
+    </div>
+  </div>
 
-<% if user_signed_in? %>
-  <%= link_to 'Edit', edit_project_path(@project) %> |
-<% end %>
-<%= link_to 'Back', projects_path %>
+  <% if user_signed_in? %>
+    <%= link_to 'Edit', edit_project_path(@project), :class => "rounded bg-success text-white" %>
+  <% end %>
+  <%= link_to 'Back', projects_path, :class => "rounded bg-info text-white" %>
+</div>
+
+
