added exception files in rails helper to increase coverage

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -24,7 +24,7 @@
   <p></p>
 
   <div class="actions">
-    <%= f.submit "Sign up", :class => "bg-success text-white" %>
+    <%= f.submit "Sign up", :class => "bg-success text-white rounded" %>
   </div>
 <% end %>
 
